# termuxcode

./: .gitignore  .mcp.json  BUG_REPORT.md  BUG_REPORT_SDK.md  CLAUDE.md  EXAMPLES_FILTERS.md  GITHUB_ISSUE_TEMPLATE.md  PLAN_SESSION_PARALLEL.md  README.md  launch_webview.py  main.py  package.json  patch_sdk.py  pyinstaller.spec  pyproject.toml  test_tool.py
.claude/: launch.json  settings.json  settings.local.json
.claude/sessions/: .last_active  messages_e786cbda.jsonl  sessions.json
.github/workflows/: build-apk.yml  build-dev.yml  build-release.yml  deploy.yaml  pypi.yaml  pypi.yml
android-project/: gradle.properties  settings.gradle
android-project/app/: build.gradle
claude_code_mobile/: README.md  __init__.py  cli.py  message_converter.py  serve.py  ws_connection.py  ws_server.py
docs/: ARQUITECTURA_VUE3.md  LSP_CAPABILITIES_TY.md  LSP_TOOLS_RECOMMENDATIONS.md  LSP_USAGE_ANALYSIS.md  RESUMEN_MIGRACION_VUE3.md  agent_registry.json  claude-agent-sdk-reference.md  creating_agents.md  ui-specs.md
examples/: custom_tool_agent.py  test_sdk_versions.py
examples/external_mcp/: server.py
scripts/: copy_web_static.py  generate-icons.py
src-tauri/: Cargo.toml  tauri.android.conf.json  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/termuxcode/: __init__.py  __main__.py  cli.py  web_server.py
src/termuxcode/.sessions/: .session_id  messages_29eff991.jsonl
src/termuxcode/core/: __init__.py  agent.py  background_manager.py  history.py  notification_system.py  session_state.py
src/termuxcode/tui/: __init__.py  __main__.py  agent.py  app.py  blackboard_screen.py  chat.py  feedback_filter.py  filters.py  history.py  project_info.py  sessions.py  simple_agent.py  structured_response.py  styles.py  token_info.py
static/: app.js  index.html  manifest.json  test_lsp.py
static/css/: animations.css  base.css  input.css  markdown.css  messages.css  question.css  responsive.css  tabs.css  toolbar.css  variables.css
static/js/: app-vue.js  connection.js  haptics.js  input-feedback.js  legacy-modal-mcp.js  legacy-modal-question.js  legacy-modal-utils.js  legacy-storage.js  modal-approval.js  modal-mcp.js  modals.js  pipeline.js  scroll-feedback.js  settings.js  state.js  storage.js  tabs.js  ui.js
static/js/components/: ActionToolbar.js  AppHeader.js  EditorSidebar.js  FiletreeSidebar.js  InputBar.js  LogSidebar.js  McpModal.js  MessageList.js  PlanModal.js  StatsDisplay.js  (+3 more)
termuxcode/: __init__.py  cli.py  desktop_server.py  lsp_proxy.py  message_converter.py  serve.py  serve_https.py  terminal_server.py  ws_config.py  ws_connection.py  ws_server.py
termuxcode/connection/: __init__.py  ask_handler.py  base.py  claude_md_manager.py  filetree_watcher.py  history_manager.py  hooks.py  jedi_analyzer.py  log_handler.py  lsp_client.py  lsp_manager.py  message_processor.py  sdk_client.py  sender.py  session.py  session_registry.py  tool_approval_handler.py
termuxcode/custom_tools/: __init__.py  registry.py  server.py
termuxcode/static/: editor-tests.html  index.html
tests/: __init__.py  test_basic.py
(+160 files in other folders)
