[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "termuxcode"
version = "1.1.3"
description = "Claude Code client for Android/Termux with WebSocket server"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "claude-agent-sdk==0.1.48",
    "websockets==15.0.1",
    "anyio==4.8.0",
    "mcp==1.12.4",
    "jedi>=0.19",
    "pyflakes>=3.0"
]
authors = [
    {name = "Alejo Air", email = "alejoair@users.noreply.github.com"}
]

[project.urls]
Homepage = "https://github.com/alejoair/termuxcode"
Repository = "https://github.com/alejoair/termuxcode"

[tool.setuptools.packages.find]
where = ["."]
include = ["termuxcode*"]

[project.scripts]
termuxcode = "termuxcode.cli:main"
