[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "termuxcode"
version = "1.1.8"
description = "Claude Code client for Android/Termux with WebSocket server"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "claude-agent-sdk==0.1.58",
    "websockets==15.0.1",
    "anyio==4.8.0",
    "mcp==1.12.4",
    "ty==0.0.29",
    "pathspec>=0.12.0",
    "pywinpty>=2.0.0; sys_platform == 'win32'",
]
authors = [
    {name = "Alejo Air", email = "alejoair@users.noreply.github.com"}
]

[project.urls]
Homepage = "https://github.com/alejoair/termuxcode"
Repository = "https://github.com/alejoair/termuxcode"

[tool.setuptools.packages.find]
where = ["."]
include = ["termuxcode*"]

[tool.setuptools.package-dir]
"" = "."

[tool.setuptools.package-data]
termuxcode = ["static/**/*"]

[project.scripts]
termuxcode = "termuxcode.cli:main"

[tool.ruff.lint]
select = ["ANN001", "ANN201", "ANN202"]
